# weeki

./: .breakpoints  .replit  =4.8.0  CLAUDE.md  Pasted--File-nix-store-418nyl05dzqb57brvqjd1g22p27xyqbq-python3-3-10-14-lib-python3-10-concurrent-future-1733875994306.txt  Procfile  analyze_libraries.py  backup.sql  database_dump.sql  download_pg_dump.sh  dump.py  generate_sql.py  postgres_migration.sql  pyproject.toml  replit.nix  requierements.txt  requirements.txt
accounts/: forms.py  urls.py  views.py
api/: authentication.py  consumers.py  middleware.py  routing.py  services.py  urls.py  utils.py  views.py
api/agents/: chat_agent.py  chat_graph.py  chat_langgraph.py
api/ai/: anthropic.py  prompts.py
api/old/: actuality_engine.py  chat_agent.py  chat_langgraph.py  conversation_agent_old.py  db_managers.py  graph_model.py  graph_routes.py  prompt_manager.py  topic_detector.py  topic_old.py
api/security/: utils.py
api/serializers/: __init__.py  category_serializers.py  chat_serializer.py  chat_serialzers.py  chat_session_serializer.py  meeting_serializer.py  summary_serializer.py  topic_serializer.py  user_serializer.py  week_serializers.py  weeki_serializers.py  year_serializers.py
api/templates/: stream.html
api/utilities/: anthropic.py  bedrock_anthropic.py  embedding.py  midjourney.py  pinecone.py  regex.py  utils.py  xai.py
app/: admin.py  consumers.py  context_processors.py  forms.py  middleware.py  models.py  par.py  r.py  routing.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_alter_profile_premium_date.py  0002_profile_theme_weeki_image_alter_week_value_vision.py  0003_language_rename_user_id_weeki_user_and_more.py  0003_remove_conversation_created_at_topic_date_created_and_more.py  0004_profile_reminder_hour_alter_profile_premium_date.py  0004_rename_year_of_death_profile_final_age.py  0005_auto_20240719_1223.py  0005_profile_premium_start_alter_profile_premium_date.py  0005_rename_short_language_locale_language_code_and_more.py  0006_prompt_alter_profile_premium_date_and_more.py  (+62 more)
app/templates/: app.html  audio.html  (+3 more)
blog/: admin.py  models.py  urls.py  views.py
django_project/: asgi.py  context_processors.py  jinja2.py  middleware.py  settings.py  urls.py  views.py
payments/: models.py  urls.py  views.py
pg_dump_16/: .gitrevision
scripts/: clean_cache.py  dump.py  migrate_to_postgres.py  python2.py
templates/: 404.html  about.html  app_footer.html  app_layout.html  app_navbar.html  base_layout.html  email_layout.html  feedback.html  home_navbar.html  homepage.html
(+77 files in other folders)
