[tool.poetry]
authors = ["Lukas"]
description = ""
name = "weeki"
version = "0.1.0"
packages = [
    { include = "django_project" },
]

# [tool.poetry.scripts]
# daphne = "daphne:main"

[tool.poetry.dependencies]
Django = "^5.0"
python = "^3.10"
humanize = "4.9.0"


pyaudio = "0.2.14"
pyaudio-wheels = "0.0.1"
dj-database-url = "2.2.0"
channels = "4.1.0"
daphne = "4.1.2"
psycopg2-binary = "^2.9.9"
wc-html2pdf = "0.1.0"
deepgram-sdk = "3.4.0"



[tool.poetry.dev-dependencies]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.poetry.scripts]
start = "django_project.asgi:application"



[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
